syntax = "proto3";

package test.common.upstream;

import "test/fuzz/common.proto";
import "envoy/config/core/v3/health_check.proto";

message Respond {
    test.Fuzz.Headers headers = 1; //TODO: Add validation for path in any case
    string status = 2; //Add validation that all the characters are between 0 - 9, or ' ', would something like "9 00 9" pass?, and require it
}

message DegradationBehavior {
    bool degraded = 1;
    int32 simulated_time_seconds_for_degradation = 2;
}

message StreamCreate {

}

message HttpAction {
    oneof action_selector {
        Respond respond = 1;
        boolean stream_create = 2;
        //TODO: time advancement, multiple hosts (maps to other two as well), separate respondBody, respondTrailers
    }
}

message HttpHealthCheckTestCase {
    core.HealthCheck health_check_config = 1;
    Repeated HttpAction http_actions = 2;
    //Repeated TcpAction tcp_actions = 3;
    //Repeated GrpcAction grpc_actions = 4;
}
